refactor adding coerce

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
+
     <groupId>com.meli.morse</groupId>
     <artifactId>morse</artifactId>
     <version>1.0.0-00</version>
